--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Use Node.js
       uses: actions/setup-node@v3
       with:
-        node-core-version: '18.x'
+        node-version: '18.x'
     
     - name: Install Backend Dependencies
       run: |
