--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,10 +12,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    
     - name: Use Node.js
       uses: actions/setup-node@v3
       with:
         node-version: '18.x'
+        cache: 'npm'
+        cache-dependency-path: './backend/package-lock.json' # Ensures it finds the right files
     
     - name: Install Backend Dependencies
       run: |
@@ -23,6 +26,10 @@ jobs:
         npm install
     
     - name: Run Backend Tests
+      env:
+        NODE_ENV: test
+        JWT_SECRET: testsecret  # Needs a dummy secret to run tests
+        MONGO_URI: mongodb://localhost:27017/test # Dummy URI (memory server overrides this)
       run: |
         cd backend
         npm test -- --watchAll=false
