--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         node-version: '18.x'
         cache: 'npm'
-        cache-dependency-path: './backend/package-lock.json' # Ensures it finds the right files
+        cache-dependency-path: './backend/package-lock.json'
     
     - name: Install Backend Dependencies
       run: |
